RESOLVED FIXED30295
REGRESSION (r48492): Gmail voice and video chat doesn’t work
https://bugs.webkit.org/show_bug.cgi?id=30295
Summary REGRESSION (r48492): Gmail voice and video chat doesn’t work
mitz
Reported 2009-10-11 20:06:55 PDT
Gmail’s plug-in-based voice and video chat isn’t working in TOT. To reproduce, download and install the software from <http://mail.google.com/videochat> (you may want to only install GoogleVoiceandVideo.pkg, and not the other pieces), then log-in to Gmail and sign in to chat. There should be a green camera icon next to your name, and when choosing a contact, the “Video & more” menu should include “Start voice chat”. In TOT, instead of the green camera icon there is a green dot, and the voice chat option is not available.
Attachments
Fix a typo in ProxyInstance::setFieldValue() (1.25 KB, patch)
2009-10-11 20:35 PDT, mitz
no flags
Fix a typo in ProxyInstance::setFieldValue() (3.24 KB, patch)
2009-10-11 21:11 PDT, mitz
darin: review+
mitz
Comment 1 2009-10-11 20:12:02 PDT
mitz
Comment 2 2009-10-11 20:22:13 PDT
mitz
Comment 3 2009-10-11 20:35:21 PDT
Created attachment 41014 [details] Fix a typo in ProxyInstance::setFieldValue()
mitz
Comment 4 2009-10-11 21:11:43 PDT
Created attachment 41016 [details] Fix a typo in ProxyInstance::setFieldValue() Added test case. Apparently, due to testing limitations of out-of-process plug-ins, the fact that eventLoggingEnabled didn’t work didn’t cause any existing test to fail.
Darin Adler
Comment 5 2009-10-11 21:14:20 PDT
Comment on attachment 41016 [details] Fix a typo in ProxyInstance::setFieldValue() > + Test for <rdar://problem/7294267> REGRESSION (r48492): Gmail voice and > + video chat doesnât work Character set joy. r=me
mitz
Comment 6 2009-10-11 21:18:58 PDT
Mark Rowe (bdash)
Comment 7 2009-10-12 11:56:00 PDT
*** Bug 30309 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.