WebKit/mac: <rdar://problem/7294267> REGRESSION (r48492): Gmail voice and video chat doesn't work https://bugs.webkit.org/show_bug.cgi?id=30295

Reviewed by Darin Adler.

Test: plugins/setProperty.html

* Plugins/Hosted/ProxyInstance.mm:
(WebKit::ProxyInstance::setFieldValue): Fixed a typo. The function
should return early if m_instanceProxy is null.

LayoutTests: Test for <rdar://problem/7294267> REGRESSION (r48492): Gmail voice and
video chat doesn't work
https://bugs.webkit.org/show_bug.cgi?id=30295

Reviewed by Darin Adler.

* plugins/setProperty-expected.txt: Added.
* plugins/setProperty.html: Added.



Canonical link: https://commits.webkit.org/40955@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49433 268f45cc-cd09-0410-ab3c-d52691b4dbfc